--- a/app/globals.css
+++ b/app/globals.css
@@ -9,13 +9,13 @@
 
 html,
 body,
-#root,
+#__next,
 #main {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hiddenb;
+  overflow: hidden;
   user-select: none;
 }
 
@@ -33,6 +33,7 @@ canvas {
   left: 0;
   width: 100%;
   height: 100%;
+  pointer-events: none;
 }
 
 header {
