--- a/app/globals.css
+++ b/app/globals.css
@@ -2,14 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-
 * {
   box-sizing: border-box;
 }
 
 html,
 body,
-#__next,
+#root,
 #main {
   width: 100%;
   height: 100%;
@@ -27,19 +26,23 @@ canvas {
   touch-action: none;
 }
 
-.container {
-  position: absolute;
+.configurator {
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   pointer-events: none;
+  position: fixed;
+
 }
 
 header {
   display: flex;
   justify-content: space-between;
+  width: 100%;
   padding: 40px;
+  align-items: center;
+  position: fixed;
 }
 
 header p {
@@ -51,6 +54,7 @@ header p {
 header p.hidden {
   opacity: 0;
 }
+
 
 section {
   position: absolute;
