--- a/app/globals.css
+++ b/app/globals.css
@@ -162,6 +162,7 @@ button:hover {
 }
 
 .circle {
+  pointer-events: all;
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -198,6 +199,10 @@ button:hover {
   cursor: pointer;
 }
 
+.decal {
+  pointer-events: all;
+}
+
 .exit {
   position: absolute;
   top: 40px;
@@ -208,5 +213,33 @@ button:hover {
 
 .exit:hover {
   box-shadow: inset -250px 0 0 0 black;
+}
+
+/* MOBILE ADJUSTMENTS */
+
+@media screen and (max-width: 600px) {
+  .section--container {
+    margin-left: 15vw;
+  }
+
+  .section--container h1 {
+    font-size: 8rem;
+    letter-spacing: -6px;
+    line-height: 6rem;
+  }
+
+  .color-options {
+    margin-bottom: 20px;
+    flex-direction: column;
+    position: absolute;
+    top: 50%;
+    right: 40px;
+    transform: translateY(-50%);
+  }
+
+  .support--content {
+    top: -10%;
+    left: 0;
+  }
 }
 
